# MindPype

./: .buildinfo  .gitignore  .py  .readthedocs.yml  AdvancedSetup.html  BasicSetup.html  LICENSE  MANIFEST.in  MI_tutorial.py  P300_FIR_Baseline_Pipeline.py  README.html  README.md  XDF__tutorial.py  before.html  fnirs_bci.py  genindex.html  index.html  mindpype.html  mindpype.kernels.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  sub-P001_ses-S001_task-vP300+2x2_run-003.xdf  test_classifier_kernel.py  test_feature_normalization_kernel.py  test_misc_graphs.py  test_slope_kernel.py
.doctrees/: AdvancedSetup.doctree  BasicSetup.doctree  README.doctree  before.doctree  environment.pickle  index.doctree  mindpype.doctree  mindpype.kernels.doctree
UI/: GUI.py  JSONParser.py  client_interface.py  json_template.json  model_parse.py  resource1.py  resource2.py
_build/: .buildinfo  README.html  bcipy.html  bcipy.kernels.html  genindex.html  index.html  objects.inv  searchindex.js
_modules/: index.html
_sources/: AdvancedSetup.rst.txt  before.rst.txt  index.rst.txt  mindpype.kernels.rst.txt  mindpype.rst.txt
analysis/: BCIComp_MDM_online_extracting_cfg.json  BCIComp_MDM_testing_cfg.json  calc_cov.py  cho_MDM_testing_cfg.json  cho_preprocess.m  clsf_eval.py  concat_data.py  crop_trials.py  csp.py  data_ext.py  emsemble_clsf_eval.py  filter_data.py  high_gamma_MDM_testing_cfg.json  high_gamma_artifact_trials.json  high_gamma_metric_extracting_cfg.json  kaya_MDM_online_extracting_cfg.json  (+5 more)
(+625 files in other folders)
