[project]
name = "MindPype"
version = "0.1.1"
authors = [
  {name = "Nicolas Ivanov", email = "nicolas.ivanov94@gmail.com"},
  {name = "Aaron Lio", email = "aaron.lio@mail.utoronto.ca"},
]
description = "A library for building BCI data processing pipelines."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
  'Programming Language :: Python :: 3',
  'Operating System :: OS Independent',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering :: Human Machine Interfaces',
]
dependencies = [
  'matplotlib==3.5.2', 
  'more-itertools==8.2.0',
  'numpy==1.22.4',
  'numpydoc==0.9.2',
  'pyriemann==0.2.7',
  'scikit-learn==1.1.1',
  'scipy==1.8.1',
  'pylsl==1.14.0',
  'pyxdf==1.16.4',
  'liesl==0.3.5.0',
  'mne==1.4.2',
]

[tool.setuptools.packages.find]
where = ["", "mindpype"]
exclude = ["tests", "*.tests", "*.tests.*", ".tutorials*"]
